--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
             </div>
             <div class="right-section">
-            <button id="signin-button">Register/Sign In</button>
+              <a href = "signin.html"><button id="signin-button">Register/Sign In</button></a>
             </div>
         </div>
 
